force-app/main/default/objects/Lead/fields/Awarding_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Agencies__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Long Text Area (Sprint 25 Defect #1 fix): multi-agency federal contractors produce agency lists exceeding 255 chars (observed up to ~570); Text(255) caused STRING_TOO_LONG write failures. Widened to preserve full agency data.</description>
    <label>Awarding Agencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>