force-app/main/default/objects/Lead/fields/CIK__c.field-meta.xml
<CustomField>
    <fullName>CIK__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>CIK</label>
    <length>15</length>
    <type>Text</type>
</CustomField>