force-app/main/default/objects/Lead/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>