force-app/main/default/objects/Lead/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>