force-app/main/default/objects/Lead/fields/Federal_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Federal_Contractor__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Federal Contractor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>