force-app/main/default/objects/Lead/fields/Is_Test_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this Lead as a test or validation record. Set to true for all test leads to exclude them from pilot reports and KPI dashboards.</description>
    <label>Is Test Lead</label>
    <type>Checkbox</type>
</CustomField>