force-app/main/default/objects/Lead/fields/Latest_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Award_Date__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Latest Award Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>