force-app/main/default/objects/Lead/fields/Market_Annual_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Market_Annual_Payroll__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Market Annual Payroll</label>
    <length>20</length>
    <type>Text</type>
</CustomField>