force-app/main/default/objects/Lead/fields/Market_Employment__c.field-meta.xml
<CustomField>
    <fullName>Market_Employment__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Market Employment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>