force-app/main/default/objects/Lead/fields/Meeting_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Date__c</fullName>
    <label>Meeting Booked Date</label>
    <description>Date the prospect booked a meeting through Microsoft Bookings. Stamped automatically by OA_BookingPoller. Used by OA_FollowUpScheduler to suppress drip emails.</description>
    <type>Date</type>
</CustomField>