force-app/main/default/objects/Lead/fields/Meeting_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Join_URL__c</fullName>
    <label>Meeting Join URL</label>
    <description>Teams meeting join link for a campaign-generated meeting. Populated manually or by a future Microsoft Graph integration; Flow cannot reliably parse the URL out of Event.Description free text.</description>
    <inlineHelpText>The Microsoft Teams join link for the scheduled meeting.</inlineHelpText>
    <type>Url</type>
</CustomField>