force-app/main/default/objects/Lead/fields/Outreach_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Cohort__c</fullName>
    <description>Identifies the outreach cohort this Lead belongs to. Populate manually before enrollment. Values: Test / Validation, Pilot Batch 1, Pilot Batch 2, Production Ramp.</description>
    <label>Outreach Cohort</label>
    <length>50</length>
    <type>Text</type>
</CustomField>