force-app/main/default/objects/Lead/fields/Outreach_Segment__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Segment__c</fullName>
    <label>Outreach Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teaming Partner</fullName>
            </value>
            <value>
                <fullName>EDWOSB Sub Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>