force-app/main/default/objects/Lead/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Parent Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>