force-app/main/default/objects/Lead/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <label>Relationship Status</label>
    <description>Current relationship stage with this prospect. Updated automatically by OA_BookingPoller when a meeting is booked. Used by OA_FollowUpScheduler to determine whether to send follow-up emails.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Call Complete</fullName>
            </value>
            <value>
                <fullName>Capability Statement Sent</fullName>
            </value>
            <value>
                <fullName>Teaming Active</fullName>
            </value>
            <value>
                <fullName>Opportunity Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>