force-app/main/default/objects/Lead/fields/SAM_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>SAM_Registration_Status__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>SAM Registration Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>