force-app/main/default/objects/Lead/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>SIC Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>