force-app/main/default/objects/Lead/fields/State_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Entity_Number__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>State Entity Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>