force-app/main/default/objects/Lead/fields/Total_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Award_Amount__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>Total Award Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>