force-app/main/default/objects/Lead/fields/UEI__c.field-meta.xml
<CustomField>
    <fullName>UEI__c</fullName>
    <description>Lead Enrichment Platform field (values written by the enrichment writer). Text-typed to match the frozen mappers' string output; typed variants require a future mapper coercion layer.</description>
    <label>UEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>