force-app/main/default/objects/Lead/fields/UEI_Verification_Evidence__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verification_Evidence__c</fullName>
    <label>UEI Verification Evidence</label>
    <description>Human-readable proof of why the UEI is trusted (source, load date, spot-check run id and sample result, well-formed/unique checks).</description>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>