force-app/main/default/objects/Lead/fields/UEI_Verification_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verification_Run_ID__c</fullName>
    <label>UEI Verification Run ID</label>
    <description>Identifier of the verification batch that set this Lead's status (enables batch-level rollback).</description>
    <length>36</length>
    <type>Text</type>
</CustomField>