force-app/main/default/objects/Lead/fields/UEI_Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verification_Source__c</fullName>
    <label>UEI Verification Source</label>
    <description>Records which trusted source established the UEI as Verified (e.g. 'SAM.gov bulk load June 2026').</description>
    <length>100</length>
    <type>Text</type>
</CustomField>