force-app/main/default/objects/Lead/fields/UEI_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verification_Status__c</fullName>
    <label>UEI Verification Status</label>
    <description>Governance gate for Tier A automated Lead write-back. Verified = Lead UEI confirmed trusted (SAM.gov origin + spot-check). Only Verified Leads are eligible for automated UEI matching. Default Unverified.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>