force-app/main/default/objects/Lead/fields/UEI_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verified_By__c</fullName>
    <label>UEI Verified By</label>
    <description>User or automation identity that marked the UEI Verified.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UEI Verified Leads</relationshipLabel>
    <relationshipName>UEI_Verified_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>