force-app/main/default/objects/Lead/fields/UEI_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>UEI_Verified_Date__c</fullName>
    <label>UEI Verified Date</label>
    <description>Timestamp when the UEI was marked Verified by a verification run.</description>
    <type>DateTime</type>
</CustomField>