force-app/main/default/objects/Lead/fields/USASpending_Awarding_Sub_Agency__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Awarding_Sub_Agency__c</fullName>
    <label>USASpending Awarding Sub-Agency</label>
    <description>Write-back target. Mirrors OA_USASpending_Staging__c.Awarding_Sub_Agency__c Text(255). Blank-only write.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>