force-app/main/default/objects/Lead/fields/USASpending_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Contract_Type__c</fullName>
    <label>USASpending Contract Type</label>
    <description>Write-back target. Mirrors OA_USASpending_Staging__c.Contract_Type__c Text(100). Blank-only write.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>