force-app/main/default/objects/Lead/fields/USASpending_Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Last_Enriched__c</fullName>
    <label>USASpending Last Enriched Date</label>
    <description>Write-back target + provenance stamp. Mirrors OA_USASpending_Staging__c.Query_Date__c (Date). Blank-only write.</description>
    <type>Date</type>
</CustomField>