force-app/main/default/objects/Lead/fields/USASpending_Latest_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Latest_Award_Amount__c</fullName>
    <label>USASpending Latest Award Amount</label>
    <description>Write-back target. Latest federal award amount from USASpending staging (blank-only write; overwrite prohibited). Mirrors OA_USASpending_Staging__c.Award_Amount__c Number(18,2).</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>