force-app/main/default/objects/Lead/fields/USASpending_Latest_Award_Desc__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Latest_Award_Desc__c</fullName>
    <label>USASpending Latest Award Description</label>
    <description>Write-back target. Mirrors OA_USASpending_Staging__c.Award_Description__c LongTextArea(500). Blank-only write.</description>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>