force-app/main/default/objects/Lead/fields/USASpending_Latest_Award_ID__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Latest_Award_ID__c</fullName>
    <label>USASpending Latest Award ID</label>
    <description>Write-back target. Mirrors OA_USASpending_Staging__c.Award_ID__c Text(50). Blank-only write.</description>
    <length>50</length>
    <type>Text</type>
</CustomField>