force-app/main/default/objects/Lead/fields/USASpending_Performance_State__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Performance_State__c</fullName>
    <label>USASpending Performance State</label>
    <description>Write-back target. Mirrors OA_USASpending_Staging__c.Performance_State__c Text(5). Blank-only write.</description>
    <length>5</length>
    <type>Text</type>
</CustomField>