force-app/main/default/objects/Lead/fields/USASpending_Source_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>USASpending_Source_Run_ID__c</fullName>
    <label>USASpending Source Enrichment Run ID</label>
    <description>Audit link to the enrichment run that produced the written-back data. Mirrors OA_USASpending_Staging__c.Enrichment_Run_ID__c Text(36).</description>
    <length>36</length>
    <type>Text</type>
</CustomField>