force-app/main/default/objects/Lead/fields/USASpending_UEI__c.field-meta.xml
<CustomField>
    <fullName>USASpending_UEI__c</fullName>
    <label>USASpending Matched UEI</label>
    <description>OPTIONAL (recommended). Audit copy of the UEI USASpending returned at write time; on a Tier A match this equals Lead.UEI_Unique_entity_Identifier__c. Mirrors staging Recipient_UEI__c Text(12).</description>
    <length>12</length>
    <type>Text</type>
</CustomField>